# trec_evaluate

./: .env.example  .gitignore  README.md  RUN_GUIDE.md  pyproject.toml
configs/: trec2023.yaml
scripts/: install_trec_eval.sh
src/trec_evaluate/: __init__.py  cache.py  cli.py  config.py  download.py  es.py  experiment.py  export.py  llm.py  metrics.py  qrels.py  query_expansion.py  rerank.py  runfile.py  topics.py  trial_text.py
tests/: test_metrics_export_rerank.py  test_topics_qrels_runfile.py
