[project]
name = "trec-evaluate"
version = "0.1.0"
description = "TREC 2023 clinical trial matching experiment pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
rerank = [
    "torch==2.6.0",
    "transformers>=4.40.0",
]
llm = [
    "openai>=1.0.0",
    "google-genai>=0.3.0",
]
test = [
    "pytest>=8.0.0",
]

[project.scripts]
trec-evaluate = "trec_evaluate.cli:main"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
